<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="check_the_status">Check the status</string>
    <string name="channel_name">Progress</string>
    <string name="channel_description">Download progress</string>
    <string name="glide_option">Glide - Image Loading Library from BumpTech</string>
    <string name="load_app_option">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_option">Retrofit - Type-safe HTTP Client for Android and Java by Square, Inc</string>
    <string name="select_download_option">Please, select download option</string>
    <string name="button_default">Download</string>
    <string name="download_successful">The file was downloaded successfully!</string>
    <string name="download_failed">Failed to download file...</string>
    <string name="downloaded">Download complete</string>
    <string name="file_name">File name:</string>
    <string name="download_state">Status</string>
    <string name="state_success">Success</string>
    <string name="state_failure">Failure</string>
    <string name="ok">OK</string>
</resources>
